objects/IME__c.object
<CustomObject>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Status_Attn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Status Attn:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Status_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Status Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contents_of_IME_Report__c</fullName>
        <label>Contents of IME Report</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_IME__c</fullName>
        <label>Date of IME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depo_Date_Time__c</fullName>
        <label>Depo Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Depo_Date__c</fullName>
        <label>Depo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depo_Needed__c</fullName>
        <label>Depo Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depo_Time__c</fullName>
        <label>Depo Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Hired_By__c</fullName>
        <label>Hired By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Claimant</fullName>
                </value>
                <value>
                    <fullName>Defendant</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Intervenor</fullName>
                </value>
                <value>
                    <fullName>Maker</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>Next Friend</fullName>
                </value>
                <value>
                    <fullName>Petitioner</fullName>
                </value>
                <value>
                    <fullName>Plaintiff</fullName>
                </value>
                <value>
                    <fullName>Respondent</fullName>
                    <default>true</default>
                    <label>Respondent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IME_Date_Time__c</fullName>
        <description>Possibly used for conversion - review for deleteion - separate date time fields should be used.</description>
        <inlineHelpText>Do not use</inlineHelpText>
        <label>IME Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IME_Report_Rec_d__c</fullName>
        <label>IME Report Rec&apos;d?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IME_Type__c</fullName>
        <label>IME Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Med Records Only</fullName>
                </value>
                <value>
                    <fullName>Records &amp; Bills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Display_Name__c</fullName>
        <formula>Matter__r.litify_pm__Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>litify_pm__Matter__c</referenceTo>
        <relationshipLabel>IME</relationshipLabel>
        <relationshipName>IME</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Needles_Provider__c</fullName>
        <label>Needles Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needles_Tab_Id__c</fullName>
        <externalId>true</externalId>
        <label>Needles Tab Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Lookup for Provider Name via the roll</description>
        <formula>Provider_Role__r.litify_pm__Party_Name__c</formula>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Added to replace existing phonebook lookup - wsr 11.14.2019</description>
        <label>Provider Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Matter__c</field>
                <operation>equals</operation>
                <valueField>litify_pm__Role__c.litify_pm__Matter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>litify_pm__Role__c</referenceTo>
        <relationshipLabel>IME</relationshipLabel>
        <relationshipName>IME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IME</relationshipLabel>
        <relationshipName>IME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reschedule_From__c</fullName>
        <label>Reschedule From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testimony__c</fullName>
        <label>Testimony</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_of_IME_Print__c</fullName>
        <description>generates a printable text value of the ime time</description>
        <formula>IF (ISBLANK( Time_of_IME__c), &quot;&quot;,
TEXT(IF(HOUR(Time_of_IME__c) &lt;= 12, HOUR(Time_of_IME__c) , (HOUR(Time_of_IME__c) -12) ))
&amp; &quot;:&quot; &amp; LPAD(TEXT(MINUTE(Time_of_IME__c)),2,&apos;0&apos;) &amp; IF (HOUR(Time_of_IME__c) &lt; 12, &quot; AM&quot;, &quot; PM&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time of IME Print</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_IME__c</fullName>
        <label>Time of IME</label>
        <type>Time</type>
    </fields>
    <label>IME</label>
    <nameField>
        <displayFormat>IME-{0000}</displayFormat>
        <label>IME Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IME</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>